--- a/index.html
+++ b/index.html
@@ -1,4 +1,26 @@
 <html>
+
+  <nav>
+    <ul>
+      <li>
+        <!-- link one -->
+        <a> About Me </a>
+      </li>
+      <li>
+        <!-- link two -->
+        <a> Projects </a>
+      </li>
+      <li>
+        <!-- link three -->
+        <a> CV </a>
+      </li>
+      <li>
+        <!-- link four -->
+        <a> Contacts </a>
+      </li>
+    </ul>
+  </nav>
+
   <link href="styles/styles.css" rel="stylesheet">
   <head>
     <meta charset="utf-8">
