--- a/index.html
+++ b/index.html
@@ -22,4 +22,25 @@
     <button>Change user</button>
     <script src="scripts/main.js"></script>
     </body>
+
+    <nav>
+      <ul>
+        <li>
+          <!-- link one -->
+          <a href="#aboutMe"> About Me </a>
+        </li>
+        <li>
+          <!-- link two -->
+          <a href="#projects"> Projects </a>
+        </li>
+        <li>
+          <!-- link three -->
+          <a href="#cv"> CV </a>
+        </li>
+        <li>
+          <!-- link four -->
+          <a href="#contacts"> Contacts </a>
+        </li>
+      </ul>
+    </nav>
 </html>
