--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
   <link href="styles/styles.css" rel="stylesheet">
   <head>
     <meta charset="utf-8">
@@ -18,31 +19,9 @@
        <li>builders</li>
      </ul>
      <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
-     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+     <p>Go read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
     <button>Change user</button>
     <script src="scripts/main.js"></script>
     </body>
 
-    <nav>
-      <ul>
-        <li>
-          <!-- link one -->
-          <a href="#aboutMe"> About Me </a>
-        </li>
-        <li>
-          <!-- link two -->
-          <a href="#projects"> Projects </a>
-        </li>
-        <li>
-          <!-- link three -->
-          <a href="#cv"> CV </a>
-        </li>
-        <li>
-          <!-- link four -->
-          <a href="#contacts"> Contacts </a>
-        </li>
-      </ul>
-    </nav>
-
-    
 </html>
