--- a/index.html
+++ b/index.html
@@ -1,22 +1,27 @@
 <html>
-  <nav>
-    <ul>
-      <li>
-        <!-- link one -->
-        <a href="#aboutMe"> About Me </a>
-      </li>
-      <li>
-        <!-- link two -->
-        <a href="#projects"> Projects </a>
-      </li>
-      <li>
-        <!-- link three -->
-        <a href="#cv"> CV </a>
-      </li>
-      <li>
-        <!-- link four -->
-        <a href="#contacts"> Contacts </a>
-      </li>
-    </ul>
-  </nav>
+
+  <link href="styles/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="utf-8">
+    <title>My test page</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet" type="text/css">
+    <link href="styles/style.css" rel="stylesheet" type="text/css">
+  </head>
+  <h1>Mozilla is cool</h1>
+  <body>
+    <img src="images/firefox.png" alt="Firefox" width="200" height="200">
+  </body>
+
+  <p>At Mozilla, we’re a global community of</p>
+     <ul> <!-- changed to list in the tutorial -->
+       <li>technologists</li>
+       <li>thinkers</li>
+       <li>builders</li>
+     </ul>
+     <p>working together to keep the Internet alive and accessible, so people worldwide can be informed contributors and creators of the Web. We believe this act of human collaboration across an open platform is essential to individual growth and our collective future.</p>
+     <p>Read the <a href="https://www.mozilla.org/en-US/about/manifesto/">Mozilla Manifesto</a> to learn even more about the values and principles that guide the pursuit of our mission.</p>
+    <button>Change user</button>
+    <script src="scripts/main.js"></script>
+    </body>
+
 </html>
