--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <html>
 
-  <div class='tableauPlaceholder' id='viz1602023766895' style='position: relative'><noscript><a href='#'><img alt=' '
-          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;GT&#47;GTSRB_Result_Viz&#47;GTSRB&#47;1_rss.png'
+  <div class='tableauPlaceholder' id='viz1602085790185' style='position: relative'><noscript><a
+        href='http:&#47;&#47;www.tableaufit.com'><img alt=' '
+          src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DonorDashboardSample&#47;RegionalOverview&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
       <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
       <param name='embed_code_version' value='3' />
       <param name='site_root' value='' />
-      <param name='name' value='GTSRB_Result_Viz&#47;GTSRB' />
-      <param name='tabs' value='no' />
+      <param name='name' value='DonorDashboardSample&#47;RegionalOverview' />
+      <param name='tabs' value='yes' />
       <param name='toolbar' value='yes' />
       <param name='static_image'
-        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;GT&#47;GTSRB_Result_Viz&#47;GTSRB&#47;1.png' />
+        value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DonorDashboardSample&#47;RegionalOverview&#47;1.png' />
       <param name='animate_transition' value='yes' />
       <param name='display_static_image' value='yes' />
       <param name='display_spinner' value='yes' />
       <param name='display_overlay' value='yes' />
       <param name='display_count' value='yes' /></object></div>
   <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1602023766895'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '100%'; vizElement.style.height = (divElement.offsetWidth * 0.75) + 'px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    type='text/javascript'>                    var divElement = document.getElementById('viz1602085790185'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '850px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '800px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1250px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
 
 </html>
