--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
       <param name='display_spinner' value='yes' />
       <param name='display_overlay' value='yes' />
       <param name='display_count' value='yes' /></object></div>
-  <script
-    type='text/javascript'>                    var divElement = document.getElementById('viz1602085790185'); var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '850px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '800px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1250px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+      
+      <body>
+        <iframe width="1335px" height="894px" src="<tableau_url>">
+        </iframe>
+      </body>
 
+  <script
+    type='text/javascript'>                    
+    var divElement = document.getElementById('viz1602085790185'); 
+    var vizElement = divElement.getElementsByTagName('object')[0]; if (divElement.offsetWidth > 800) { vizElement.style.width = '1000px'; vizElement.style.height = '850px'; } else if (divElement.offsetWidth > 500) { vizElement.style.width = '100%'; vizElement.style.height = '800px'; } else { vizElement.style.width = '100%'; vizElement.style.height = '1250px'; } var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+    
 </html>
