--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 
-  <div class='tableauPlaceholder' id='viz1602085790185' style='position: relative'><noscript><a
+  <div class='tableauPlaceholder' id='viz1602085790185' style='width: 1488px; height: 706px;'><noscript><a
         href='http:&#47;&#47;www.tableaufit.com'><img alt=' '
           src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Do&#47;DonorDashboardSample&#47;RegionalOverview&#47;1_rss.png'
           style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
@@ -18,10 +18,6 @@
       <param name='display_overlay' value='yes' />
       <param name='display_count' value='yes' /></object></div>
       
-      <body>
-        <iframe width="1335px" height="894px" src="<tableau_url>">
-        </iframe>
-      </body>
 
   <script
     type='text/javascript'>                    
