--- a/index.html
+++ b/index.html
@@ -1,26 +1,20 @@
-<!doctype html>
-
-<html lang="en">
-
-<head>
-  <meta charset="utf-8">
-  <title>Embedded Analytics with Tableau Online</title>
-</head>
-
-<body>
-  <script type='text/javascript' src='https://us-east-1.online.tableau.com/javascripts/api/viz_v1.js'></script>
-  <div class='tableauPlaceholder' style='width: 1488px; height: 706px;'>
-    <object class='tableauViz' width='1488' height='706' style='display:none;'>
-      <param name='host_url' value='https%3A%2F%2Fus-east-1.online.tableau.com%2F' />
-      <param name='embed_code_version' value='3' />
-      <param name='site_root' value='&#47;t&#47;zuar' />
-      <param name='name' value='Regional&#47;GlobalTemperatures' />
-      <param name='tabs' value='yes' />
-      <param name='toolbar' value='yes' />
-      <param name='showAppBanner' value='false' />
-      <param name='filter' value='iframeSizedToWindow=true' />
-    </object>
-  </div>
-</body>
-
-</html>
+<div class='tableauPlaceholder' id='viz1603121585393' style='position: relative'><noscript><a href='#'><img alt=' '
+        src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pl&#47;PlayerStats-Top5Leagues20192020&#47;OnePlayerSummary&#47;1_rss.png'
+        style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
+    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
+    <param name='embed_code_version' value='3' />
+    <param name='site_root' value='' />
+    <param name='name' value='PlayerStats-Top5Leagues20192020&#47;OnePlayerSummary' />
+    <param name='tabs' value='no' />
+    <param name='toolbar' value='yes' />
+    <param name='static_image'
+      value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Pl&#47;PlayerStats-Top5Leagues20192020&#47;OnePlayerSummary&#47;1.png' />
+    <param name='animate_transition' value='yes' />
+    <param name='display_static_image' value='yes' />
+    <param name='display_spinner' value='yes' />
+    <param name='display_overlay' value='yes' />
+    <param name='display_count' value='yes' />
+    <param name='filter' value='mobile=' />
+    <param name='language' value='en' /></object></div>
+<script
+  type='text/javascript'>                    var divElement = document.getElementById('viz1603121585393'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '1300px'; vizElement.style.height = '927px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
