--- a/index.html
+++ b/index.html
@@ -17,4 +17,11 @@
     <param name='filter' value='mobile=' />
     <param name='language' value='en' /></object></div>
 <script
-  type='text/javascript'>                    var divElement = document.getElementById('viz1603121585393'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '1300px'; vizElement.style.height = '927px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+  type='text/javascript'>                    
+  var divElement = document.getElementById('viz1603121585393'); 
+  var vizElement = divElement.getElementsByTagName('object')[0]; 
+  vizElement.style.width = '1500px'; vizElement.style.height = '927px'; 
+  var scriptElement = document.createElement('script'); 
+  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; 
+  vizElement.parentNode.insertBefore(scriptElement, vizElement);                
+</script>
