--- a/index.html
+++ b/index.html
@@ -5,23 +5,15 @@
 <head>
   <meta charset="utf-8">
   <title>Embedded Analytics with Tableau</title>
-
 </head>
 
 <body>
-  <div id="vizContainer"></div>
-  <script src="https://us-east-1.online.tableau.com/javascripts/api/tableau-2.min.js"></script>
-  <script>
-    var viz
-    function initViz() {
-      var containerDiv = document.getElementById("vizContainer"),
-        url = "https://public.tableau.com/en-us/gallery/comparing-european-football-players?tab=viz-of-the-day&type=viz-of-the-day";
-
-      viz = new tableau.Viz(containerDiv, url);
-    }
-    initViz();
-  </script>
-
+  <iframe width="1335px" height="894px" src=<"https://public.tableau.com/en-us/gallery/comparing-european-football-players?tab=viz-of-the-day&type=viz-of-the-day">
+  </iframe>
 </body>
 
 </html>
+
+
+
+
