--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 
 <body>
   <iframe> 
-    width="1335px" height="894px" src="https://public.tableau.com/en-us/gallery/comparing-european-football-players?tab=viz-of-the-day&type=viz-of-the-day" 
-  </iframe>
+    width="1335px" height="894px" src="<https://public.tableau.com/en-us/gallery/comparing-european-football-players?tab=viz-of-the-day&type=viz-of-the-day>" 
+    </iframe>
 </body>
 
 </html>
