--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!doctype html>
+
 <html lang="en">
 
 <head>
@@ -7,40 +8,11 @@
 </head>
 
 <body>
-<div class='tableauPlaceholder' id='viz1603210746192' style='position: relative'><noscript><a href='#'><img alt=' '
-        src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ir&#47;IronViz-CapitalCitiesWouldYouLiveThere&#47;CapitalCities-IronViz2020&#47;1_rss.png'
-        style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
-    <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
-    <param name='embed_code_version' value='3' />
-    <param name='site_root' value='' />
-    <param name='name' value='IronViz-CapitalCitiesWouldYouLiveThere&#47;CapitalCities-IronViz2020' />
-    <param name='tabs' value='no' />
-    <param name='toolbar' value='yes' />
-    <param name='static_image'
-      value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ir&#47;IronViz-CapitalCitiesWouldYouLiveThere&#47;CapitalCities-IronViz2020&#47;1.png' />
-    <param name='animate_transition' value='yes' />
-    <param name='display_static_image' value='yes' />
-    <param name='display_spinner' value='yes' />
-    <param name='display_overlay' value='yes' />
-    <param name='display_count' value='yes' />
-    <param name='filter' value='mobile=' />
-    <param name='language' value='en' /></object></div>
 
- <script>
-  type='text/javascript'>                    
-  var divElement = document.getElementById('viz1603210746192'); 
-  var vizElement = divElement.getElementsByTagName('object')[0]; 
-  vizElement.style.width = '1600px'; vizElement.style.height = '1027px'; 
-  var scriptElement = document.createElement('script'); 
-  scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; 
-  vizElement.parentNode.insertBefore(scriptElement, vizElement);                
-</script>  
+  <iframe> width="1335px" height="894px" src="<https://public.tableau.com/views/IronViz-CapitalCitiesWouldYouLiveThere/CapitalCities-IronViz2020?:language=en&:display_count=y&mobile=&:origin=viz_share_link>"
+  </iframe>
 
 
 </body>
 
 </html>
-
-
-
-
