--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 
-  <iframe> width="1335px" height="894px" src="<https://public.tableau.com/views/IronViz-CapitalCitiesWouldYouLiveThere/CapitalCities-IronViz2020?:language=en&:display_count=y&mobile=&:origin=viz_share_link>"
+  <iframe> width="1335px" height="894px" src="https://public.tableau.com/views/IronViz-CapitalCitiesWouldYouLiveThere/CapitalCities-IronViz2020?:language=en&:display_count=y&mobile=&:origin=viz_share_link"
   </iframe>
 
 
