--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-<iframe src="https://public.tableau.com/views/public_exercise/Dashboard1?:showVizHome=no&:embed=true" width="645"
+<iframe src="https://public.tableau.com/views/IronViz-CapitalCitiesWouldYouLiveThere/CapitalCities-IronViz2020?:language=en&:display_count=y&mobile=&:origin=viz_share_link" width="645"
   height="955"></iframe>
 </body>
 
