--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
-<div class='tableauPlaceholder' id='viz1603216148257' style='position: relative'><noscript><a href='#'><img alt=' '
-        src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ir&#47;IronViz-CapitalCitiesWouldYouLiveThere&#47;CapitalCities-IronViz2020&#47;1_rss.png'
+<div class='tableauPlaceholder' id='viz1603216344302' style='position: relative'><noscript><a href='#'><img alt=' '
+        src='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;An&#47;AnthonyBourdainsTravels_16003533145040&#47;TonysTravelsDashboard&#47;1_rss.png'
         style='border: none' /></a></noscript><object class='tableauViz' style='display:none;'>
     <param name='host_url' value='https%3A%2F%2Fpublic.tableau.com%2F' />
     <param name='embed_code_version' value='3' />
     <param name='site_root' value='' />
-    <param name='name' value='IronViz-CapitalCitiesWouldYouLiveThere&#47;CapitalCities-IronViz2020' />
+    <param name='name' value='AnthonyBourdainsTravels_16003533145040&#47;TonysTravelsDashboard' />
     <param name='tabs' value='no' />
     <param name='toolbar' value='yes' />
     <param name='static_image'
-      value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;Ir&#47;IronViz-CapitalCitiesWouldYouLiveThere&#47;CapitalCities-IronViz2020&#47;1.png' />
+      value='https:&#47;&#47;public.tableau.com&#47;static&#47;images&#47;An&#47;AnthonyBourdainsTravels_16003533145040&#47;TonysTravelsDashboard&#47;1.png' />
     <param name='animate_transition' value='yes' />
     <param name='display_static_image' value='yes' />
     <param name='display_spinner' value='yes' />
@@ -17,4 +17,4 @@
     <param name='filter' value='mobile=' />
     <param name='language' value='en' /></object></div>
 <script
-  type='text/javascript'>                    var divElement = document.getElementById('viz1603216148257'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '1600px'; vizElement.style.height = '1027px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
+  type='text/javascript'>                    var divElement = document.getElementById('viz1603216344302'); var vizElement = divElement.getElementsByTagName('object')[0]; vizElement.style.width = '1000px'; vizElement.style.height = '2427px'; var scriptElement = document.createElement('script'); scriptElement.src = 'https://public.tableau.com/javascripts/api/viz_v1.js'; vizElement.parentNode.insertBefore(scriptElement, vizElement);                </script>
