--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html> 
     <iframe
-      src="https://public.tableau.com/views/ATaleof50Cities/ATaleof50Cities?:embed=y&:display_count=yes&:toolbar=no"
-      width="1440" height="746" frameborder="0"></iframe>
+      src="https://public.tableau.com/views/ATaleof50Cities/ATaleof50Cities?:embed=y&:display_count=yes&:toolbar=no" 
+      width="1004" height="1269" frameborder="0">
+    </iframe>
 </html>
