--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
     <iframe
-      src="https://public.tableau.com/views/ATaleof50Cities/ATaleof50Cities?:embed=y&:display_count=yes&:toolbar=no" 
+      src="https://public.tableau.com/views/PlayerStats-Top5Leagues20192020/OnePlayerSummary?:language=en&:display_count=y&mobile=&:origin=viz_share_link" 
       width="1900" height="1269" frameborder="0">
     </iframe>
 </html>
