--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html> 
     <iframe
-      src="https://public.tableau.com/views/FCBarcelona/FCBarcelona?:language=en&:display_count=y&:origin=viz_share_link"
+      src="https://public.tableau.com/views/ATaleof50Cities/ATaleof50Cities?:embed=y&:display_count=yes&:toolbar=no"
        width="1654" height="1196" frameborder=0>
     </iframe>
 </html>
