--- a/index.html
+++ b/index.html
@@ -3,4 +3,8 @@
       src="https://public.tableau.com/views/ATaleof50Cities/ATaleof50Cities?:embed=y&:display_count=yes&:toolbar=no"
        width="1004" height="1269" frameborder=0>
     </iframe>
+    <body>
+      <h1>Hello World</h1>
+      <p>I'm hosted with GitHub Pages.</p>
+    </body>
 </html>
